Fix render.yaml to use type: static

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 # Render.yaml configuration for frontend deployment
 services:
-  - type: web
+  - type: static
     name: frontend-kaokai
     rootDir: .
     plan: free
